# ai-content-personalization

./: .gitignore  CHANGELOG.md  DOCUMENTATION.md  LICENSE  PYPI_PUBLICATION_CHECKLIST.md  README.md  README.pypi.md  RELEASE_CHECKLIST.md  RELEASE_PROCESS.md  SECRETS_GUIDE.md  config.py  conftest.py  debug_import.py  demo_recommender.py  generate_token.ps1  main.py  pyproject.toml  recommendation_performance_results.json  release.bat  release.sh  release_prep.bat  release_prep.sh  requirements.txt  secure_token_management.ps1  setup.cfg  setup.py
.github/workflows/: ci-cd.yml  ci.yml  create-release.yml  pypi-publish.yml  pypi-release.yml  release.yml
deploy/: cloud_deployment.py
docs/: contributing.rst  index.rst
src/: __init__.py
src/content_generation/: multimodal_content_creator.py
src/data_collection/: user_activity_collector.py
src/emotion_ai/: emotion_detector.py
src/examples/: advanced_preprocessing_demo.py  advanced_recommendation_demo.py  content_similarity_demo.py  feature_extraction_demo.py  recommendation_demo.py  recommendation_performance.py  text_preprocessing_demo.py
src/feature_extraction/: feature_extractor.py
src/infrastructure/: data_pipeline.py
src/ml_predictors/: advanced_recommender.py  relevance_scorer.py
src/personalization_engine/: recommendation_optimizer.py
src/preprocessing/: text_preprocessor.py
src/recommendation/: content_recommender.py
tests/: test_advanced_recommender.py  test_content_generation.py  test_content_similarity.py  test_feature_extraction.py  test_recommendation.py  test_text_preprocessor.py
(+13 files in other folders)
